{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 26,
  "lineage": "a166f00d-9f21-b6e3-8370-660ec4cc5cd0",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "control",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07a3add10195338ad",
            "arn": "arn:aws:ec2:us-east-1:930816732860:instance/i-048cc744f91aca39c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-048cc744f91aca39c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ansible-lab-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-03d5ab6ab739fe1ba"
              }
            ],
            "primary_network_interface_id": "eni-03d5ab6ab739fe1ba",
            "private_dns": "ip-10-0-1-10.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.10",
            "public_dns": "ec2-18-234-203-131.compute-1.amazonaws.com",
            "public_ip": "18.234.203.131",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09cb92578a68e98ff",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-024354ab821c5e508",
            "tags": {
              "Env": "dev",
              "Name": "control.example.com",
              "Owner": "jose",
              "Project": "ansible-lab",
              "Role": "control"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "control.example.com",
              "Owner": "jose",
              "Project": "ansible-lab",
              "Role": "control"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a68c482b847bd915"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "930816732860",
            "id": "i-048cc744f91aca39c",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.compute.aws_key_pair.lab_key",
            "module.compute.data.aws_ami.ubuntu_2204",
            "module.compute.tls_private_key.lab_key",
            "module.network.aws_security_group.sg_control",
            "module.network.aws_subnet.public_a",
            "module.network.aws_vpc.lab"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "node1",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07a3add10195338ad",
            "arn": "arn:aws:ec2:us-east-1:930816732860:instance/i-032a4ae06c780cf26",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-032a4ae06c780cf26",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ansible-lab-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-07e70fd5b19bf2691"
              }
            ],
            "primary_network_interface_id": "eni-07e70fd5b19bf2691",
            "private_dns": "ip-10-0-2-11.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.11",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02439dfcd1434da5b",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0046fe4cef6a023ad",
            "tags": {
              "Env": "dev",
              "Name": "node1.example.com",
              "Owner": "jose",
              "Project": "ansible-lab",
              "Role": "node"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "node1.example.com",
              "Owner": "jose",
              "Project": "ansible-lab",
              "Role": "node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e985d49618fe13c5"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "930816732860",
            "id": "i-032a4ae06c780cf26",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.compute.aws_key_pair.lab_key",
            "module.compute.data.aws_ami.ubuntu_2204",
            "module.compute.tls_private_key.lab_key",
            "module.network.aws_security_group.sg_control",
            "module.network.aws_security_group.sg_nodes",
            "module.network.aws_subnet.private_a",
            "module.network.aws_vpc.lab"
          ]
        },
        {
          "index_key": "node2",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07a3add10195338ad",
            "arn": "arn:aws:ec2:us-east-1:930816732860:instance/i-0b96f517dbaa9ffb6",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b96f517dbaa9ffb6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ansible-lab-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-083af1e5e4c9bf464"
              }
            ],
            "primary_network_interface_id": "eni-083af1e5e4c9bf464",
            "private_dns": "ip-10-0-2-12.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.12",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-001ad349cc5dc97ed",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0046fe4cef6a023ad",
            "tags": {
              "Env": "dev",
              "Name": "node2.example.com",
              "Owner": "jose",
              "Project": "ansible-lab",
              "Role": "node"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "node2.example.com",
              "Owner": "jose",
              "Project": "ansible-lab",
              "Role": "node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e985d49618fe13c5"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "930816732860",
            "id": "i-0b96f517dbaa9ffb6",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.compute.aws_key_pair.lab_key",
            "module.compute.data.aws_ami.ubuntu_2204",
            "module.compute.tls_private_key.lab_key",
            "module.network.aws_security_group.sg_control",
            "module.network.aws_security_group.sg_nodes",
            "module.network.aws_subnet.private_a",
            "module.network.aws_vpc.lab"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0be4fd902b38113b8",
            "arn": "arn:aws:ec2:us-east-1:930816732860:elastic-ip/eipalloc-0be4fd902b38113b8",
            "association_id": "eipassoc-0f73be555866007f2",
            "domain": "vpc",
            "id": "eipalloc-0be4fd902b38113b8",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0f4bf2ae7106ed084",
            "private_dns": "ip-10-0-1-111.ec2.internal",
            "private_ip": "10.0.1.111",
            "public_dns": "ec2-52-20-229-170.compute-1.amazonaws.com",
            "public_ip": "52.20.229.170",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Env": "dev",
              "Name": "ansible-lab-nat-eip",
              "Owner": "jose",
              "Project": "ansible-lab"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "ansible-lab-nat-eip",
              "Owner": "jose",
              "Project": "ansible-lab"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "lab",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:930816732860:internet-gateway/igw-07ffbeee110dd66fc",
            "id": "igw-07ffbeee110dd66fc",
            "owner_id": "930816732860",
            "region": "us-east-1",
            "tags": {
              "Env": "dev",
              "Name": "ansible-lab-igw",
              "Owner": "jose",
              "Project": "ansible-lab"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "ansible-lab-igw",
              "Owner": "jose",
              "Project": "ansible-lab"
            },
            "vpc_id": "vpc-03238609761723721"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.lab"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0be4fd902b38113b8",
            "association_id": "eipassoc-0f73be555866007f2",
            "connectivity_type": "public",
            "id": "nat-0fdb08540b0a1e1e3",
            "network_interface_id": "eni-0f4bf2ae7106ed084",
            "private_ip": "10.0.1.111",
            "public_ip": "52.20.229.170",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-024354ab821c5e508",
            "tags": {
              "Env": "dev",
              "Name": "ansible-lab-nat",
              "Owner": "jose",
              "Project": "ansible-lab"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "ansible-lab-nat",
              "Owner": "jose",
              "Project": "ansible-lab"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.lab",
            "module.network.aws_subnet.public_a",
            "module.network.aws_vpc.lab"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:930816732860:route-table/rtb-0e6ce3becda656245",
            "id": "rtb-0e6ce3becda656245",
            "owner_id": "930816732860",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fdb08540b0a1e1e3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "dev",
              "Name": "ansible-lab-rt-private",
              "Owner": "jose",
              "Project": "ansible-lab"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "ansible-lab-rt-private",
              "Owner": "jose",
              "Project": "ansible-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-03238609761723721"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "930816732860",
            "id": "rtb-0e6ce3becda656245",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.lab",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_subnet.public_a",
            "module.network.aws_vpc.lab"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:930816732860:route-table/rtb-00cc6a00236274f1a",
            "id": "rtb-00cc6a00236274f1a",
            "owner_id": "930816732860",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07ffbeee110dd66fc",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "dev",
              "Name": "ansible-lab-rt-public",
              "Owner": "jose",
              "Project": "ansible-lab"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "ansible-lab-rt-public",
              "Owner": "jose",
              "Project": "ansible-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-03238609761723721"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "930816732860",
            "id": "rtb-00cc6a00236274f1a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.lab",
            "module.network.aws_vpc.lab"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02b9b4d9bd943ee6e",
            "region": "us-east-1",
            "route_table_id": "rtb-0e6ce3becda656245",
            "subnet_id": "subnet-0046fe4cef6a023ad"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.lab",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private_a",
            "module.network.aws_subnet.public_a",
            "module.network.aws_vpc.lab"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0677a819e16478027",
            "region": "us-east-1",
            "route_table_id": "rtb-00cc6a00236274f1a",
            "subnet_id": "subnet-024354ab821c5e508"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.lab",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public_a",
            "module.network.aws_vpc.lab"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_control",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:930816732860:security-group/sg-0a68c482b847bd915",
            "description": "SSH from my IP to control; egress all",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a68c482b847bd915",
            "ingress": [
              {
                "cidr_blocks": [
                  "181.61.246.245/32"
                ],
                "description": "SSH from my IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ansible-lab-sg-control",
            "name_prefix": "",
            "owner_id": "930816732860",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Name": "ansible-lab-sg-control",
              "Owner": "jose",
              "Project": "ansible-lab"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "ansible-lab-sg-control",
              "Owner": "jose",
              "Project": "ansible-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-03238609761723721"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "930816732860",
            "id": "sg-0a68c482b847bd915",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.lab"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:930816732860:security-group/sg-0e985d49618fe13c5",
            "description": "Allow SSH only from control; egress all",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e985d49618fe13c5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "SSH from control SG",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a68c482b847bd915"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ansible-lab-sg-nodes",
            "name_prefix": "",
            "owner_id": "930816732860",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Name": "ansible-lab-sg-nodes",
              "Owner": "jose",
              "Project": "ansible-lab"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "ansible-lab-sg-nodes",
              "Owner": "jose",
              "Project": "ansible-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-03238609761723721"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "930816732860",
            "id": "sg-0e985d49618fe13c5",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_security_group.sg_control",
            "module.network.aws_vpc.lab"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:930816732860:subnet/subnet-0046fe4cef6a023ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0046fe4cef6a023ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "930816732860",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Env": "dev",
              "Name": "ansible-lab-private-a",
              "Owner": "jose",
              "Project": "ansible-lab"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "ansible-lab-private-a",
              "Owner": "jose",
              "Project": "ansible-lab"
            },
            "vpc_id": "vpc-03238609761723721"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "930816732860",
            "id": "subnet-0046fe4cef6a023ad",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.lab"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:930816732860:subnet/subnet-024354ab821c5e508",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-024354ab821c5e508",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "930816732860",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Env": "dev",
              "Name": "ansible-lab-public-a",
              "Owner": "jose",
              "Project": "ansible-lab"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "ansible-lab-public-a",
              "Owner": "jose",
              "Project": "ansible-lab"
            },
            "vpc_id": "vpc-03238609761723721"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "930816732860",
            "id": "subnet-024354ab821c5e508",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.lab"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "lab",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:930816732860:vpc/vpc-03238609761723721",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05aba9faa3f5f5e8e",
            "default_route_table_id": "rtb-053e5ddb0edb3c995",
            "default_security_group_id": "sg-0508321aba9789ec6",
            "dhcp_options_id": "dopt-0adf519048cd6829b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03238609761723721",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-053e5ddb0edb3c995",
            "owner_id": "930816732860",
            "region": "us-east-1",
            "tags": {
              "Env": "dev",
              "Name": "ansible-lab-vpc",
              "Owner": "jose",
              "Project": "ansible-lab"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "ansible-lab-vpc",
              "Owner": "jose",
              "Project": "ansible-lab"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}